--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha",
-    "test-ci": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha --report lcovonly  -- --reporter dot test/"
+    "test-ci": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha --report html --report lcovonly  -- --reporter dot test/"
   },
   "repository": {
     "type": "git",
