--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "node_modules/.bin/mocha",
     "test-ci": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha --report html --report lcovonly  -- --reporter dot test/"
   },
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wyvernnot/process-cpu-utilization.git"
